-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
When --component-id is missing in the command of delelting layout component, there will be no error message. Thus, the failure of the command could be easily ignored. And event the return value is checked, it is hard to understand why it failure.
A fix patch is coming.
Reproduce:
Before fix patch:
# lfs setstripe --component-del 2 # echo $? 22
After fix patch:
# lfs setstripe --component-del 2 lfs setstripe: neither flags nor component ID is specified # echo $? 22